[gd_scene load_steps=11 format=3 uid="uid://bes61socob36q"]

[ext_resource type="AudioStream" uid="uid://b4rig48kfrcn8" path="res://assets/sound/カーソル移動9.mp3" id="1_apviw"]
[ext_resource type="Script" uid="uid://cmifajnse1tye" path="res://src/autoload/sound_manager.gd" id="1_p3jmk"]
[ext_resource type="AudioStream" uid="uid://cgk8o2wdpoc4l" path="res://assets/sound/決定ボタンを押す7.mp3" id="2_tyawr"]
[ext_resource type="AudioStream" uid="uid://b73fxq2acr5ft" path="res://assets/sound/keyboard.mp3" id="4_l2rpn"]
[ext_resource type="Script" uid="uid://c6dft6284gyaa" path="res://src/RandomPitchShift.gd" id="5_68h3t"]
[ext_resource type="AudioStream" uid="uid://cm3x4msnqk7wr" path="res://assets/sound/ビープ音4.mp3" id="5_q4xm8"]
[ext_resource type="Script" uid="uid://defub68ffeuj" path="res://src/MistakeSound.gd" id="7_payas"]
[ext_resource type="AudioStream" uid="uid://c8rl1qr4vjn25" path="res://assets/sound/paper.mp3" id="8_j7rdy"]
[ext_resource type="AudioStream" uid="uid://ji7etef3kh3s" path="res://assets/sound/紙を広げる2.mp3" id="9_ahq7n"]
[ext_resource type="AudioStream" uid="uid://4fnv3b5m30j5" path="res://assets/sound/folder_open.mp3" id="11_5s3xk"]

[node name="SoundManager" type="Node"]
script = ExtResource("1_p3jmk")

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_apviw")
bus = &"SFX"

[node name="PressSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_tyawr")
volume_db = -5.0
bus = &"SFX"

[node name="TypeSound" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("4_l2rpn")
volume_db = -5.0
bus = &"SFX"
script = ExtResource("5_68h3t")

[node name="TypeMistakeSound" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_q4xm8")
volume_db = -10.0
bus = &"SFX"
script = ExtResource("7_payas")

[node name="PaperOpen" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_ahq7n")
volume_db = -15.0
bus = &"SFX"
script = ExtResource("5_68h3t")

[node name="PaperClose" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_ahq7n")
volume_db = -15.0
pitch_scale = 0.8
bus = &"SFX"
script = ExtResource("5_68h3t")

[node name="PaperMoveIn" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("8_j7rdy")
volume_db = -5.0
bus = &"SFX"
script = ExtResource("5_68h3t")

[node name="FolderSlide" type="AudioStreamPlayer" parent="."]
process_mode = 3
pitch_scale = 0.8
bus = &"SFX"
script = ExtResource("5_68h3t")

[node name="FolderOpen" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("11_5s3xk")
bus = &"SFX"
script = ExtResource("5_68h3t")

[node name="SFXPool" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SFXPool"]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="SFXPool"]

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="SFXPool"]

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="SFXPool"]

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="SFXPool"]

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="SFXPool"]
